--- a/s3clihelper.html
+++ b/s3clihelper.html
@@ -14,6 +14,7 @@
 	<script src="config.js"></script>
 	<script src="js/nav.js"></script>
 	<script src="js/utils.js"></script>
+	<script src="js/tools.js"></script>
 	<script>
 
 	$(document).ready(function(){
