--- a/s3clihelper.html
+++ b/s3clihelper.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>S3 CLI Helper Tool v0.02 - 20Nov2019</title>
+	<title>S3 CLI Helper</title>
 	<link rel="stylesheet" href="css/styles.css" />
 	<link rel="stylesheet" href="css/nav.css" />
 	<link rel='stylesheet' href='css/fontawesome-all5.css' />
@@ -26,6 +26,7 @@
 		}
 		$("#dropdownTool").html(newhtml);
 		onRefresh();
+		document.title = config_in_mem.title;
 	});
 
 </script>
@@ -82,14 +83,18 @@
 </div>
 
 <div id="main">
+	An offline version of this software is available here: <button onclick="window.open('/s3clihelper/S3CliHelper.zip')" target="_"><i class="fa fa-download"></i></button>
+	<BR>
+	<BR>
 	<button onclick="CopyToClipBoardCLIA()">Copy <i class="far fa-copy"></i></button>
 	<button id="docButton" onclick="window.open('https://stackoverflow.com/')" target="_">Docs <i class="fas fa-external-link-alt"></i></button>
+	<button id="dowloadButton" onclick="window.open('https://www.google.com')" target="_">Download <i class="fa fa-download"></i></button>
 	<BR>
-	<textarea id="cliArea" style="width: 800px; height: 200px;" readonly></textarea>
+	<textarea id="cliArea" style="width: 800px; height: 50px; font-size: 15px;" readonly></textarea>
 	<HR><BR>
 	<span id="credfile"></span><BR>
 	<button onclick="CopyToClipBoardCA()">Copy <i class="far fa-copy"></i></button><BR>
-	<textarea id="credentialArea" style="width: 800px; height: 200px;" readonly></textarea>
+	<textarea id="credentialArea" style="width: 800px; height: 120px; font-size: 15px;" readonly></textarea>
 </div> <!-- end of main div -->
 
 <div style="display:none" id="hiddentext"><input type="text" id="copytext" value="null"></div>
