diff --git a/config.js b/config.js
Updated version, added default iam endpoint

for AWS CLI, added create object with locked bucket, list MPUs and abort partID

for S3 CMD; made some corrections, added create bucket with custom policy and with object lock

reorganized s3fs for clarity

added splunk operations

added kubernetes operator

diff --git a/js/tools.js b/js/tools.js

fixed existing references

added region, profile, extracted hostname, storage policy, base64 encoding of accesskey and secretaccesskey

if storageClass is not defined, set it to cloudian-greenfields

added iamendpoint

reordered CLI output

moved credential file parcing out

diff --git a/js/utils.js b/js/utils.js

added
storagePolicy
storageClass
iamendpoint

diff --git a/s3clihelper.html b/s3clihelper.html

added storagePolicy, upload ID, storage class and IAM Endpoint ot GUI

--- a/s3clihelper.html
+++ b/s3clihelper.html
@@ -55,6 +55,10 @@
 	<tr><td>Region</td><td><input id="inputRegion" type="text" size="20" placeholder="us-east" onblur="onBlur()" /></td></tr>
 	<tr><td>Profile</td><td><input id="inputProfile" type="text" size="20" placeholder="default" onblur="onBlur()" /></td></tr>
 	<tr><td>Volume</td><td><input id="inputVolume" type="text" size="20" placeholder="volume" onblur="onBlur()" /></td></tr>
+	<tr><td>Storage Policy ID:</td><td><input id="inputStoragePolicy" type="text" size="20" placeholder="policyid" onblur="onBlur()" /></td></tr>
+	<tr><td>Upload ID:</td><td><input id="inputUploadID" type="text" size="20" placeholder="uploadid" onblur="onBlur()" /></td></tr>
+	<tr><td>Storage Class:</td><td><input id="inputStorageClass" type="text" size="20" placeholder="cloudian-greenfield" onblur="onBlur()" /></td></tr>
+	<tr><td>IAM Endpoint:</td><td><input id="inputIAMEndpoint" type="text" size="20" placeholder="http://iam.example.com:16080" onblur="onBlur()" /></td></tr>
 
 	<tr><td>User: </td><td><input id="inputDataUser" type="text" size="20" placeholder="cloudian" onblur="onBlur()" /></td></tr>
 	<tr><td>Group: </td><td><input id="inputDataGroup" type="text" size="20" placeholder="default" onblur="onBlur()" /></td></tr>
